--- a/DefaultWindow/DefaultWindow/DefaultWindow.vcxproj
+++ b/DefaultWindow/DefaultWindow/DefaultWindow.vcxproj
@@ -148,10 +148,10 @@
     <ClInclude Include="AbstractFactory.h" />
     <ClInclude Include="BmpMgr.h" />
     <ClInclude Include="Boss.h" />
-    <ClInclude Include="BossBullet.h" />
     <ClInclude Include="BossLeftArm.h" />
     <ClInclude Include="BossRightArm.h" />
     <ClInclude Include="Box.h" />
+    <ClInclude Include="Bullet.h" />
     <ClInclude Include="CollisionMgr.h" />
     <ClInclude Include="DefaultWindow.h" />
     <ClInclude Include="Define.h" />
@@ -174,15 +174,16 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Sword.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Vector2D.h" />
     <ClInclude Include="Weapon.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BmpMgr.cpp" />
     <ClCompile Include="Boss.cpp" />
-    <ClCompile Include="BossBullet.cpp" />
     <ClCompile Include="BossLeftArm.cpp" />
     <ClCompile Include="BossRightArm.cpp" />
     <ClCompile Include="Box.cpp" />
+    <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="CollisionMgr.cpp" />
     <ClCompile Include="DefaultWindow.cpp" />
     <ClCompile Include="KeyMgr.cpp" />
