--- a/DefaultWindow/DefaultWindow/DefaultWindow.vcxproj.filters
+++ b/DefaultWindow/DefaultWindow/DefaultWindow.vcxproj.filters
@@ -88,8 +88,8 @@
     <Filter Include="01. Obj\03. Boss\01. BossRightArm">
       <UniqueIdentifier>{a5b27d85-9524-4f94-b3bb-7871b572790e}</UniqueIdentifier>
     </Filter>
-    <Filter Include="01. Obj\03. Boss\02. BossBullet">
-      <UniqueIdentifier>{3b6533a2-669a-482d-b781-3104f89ac328}</UniqueIdentifier>
+    <Filter Include="01. Obj\06. Bullet">
+      <UniqueIdentifier>{bfce6a05-fabe-4cb6-a25f-4ff9359fe392}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -183,8 +183,11 @@
     <ClInclude Include="BossRightArm.h">
       <Filter>01. Obj\03. Boss\01. BossRightArm</Filter>
     </ClInclude>
-    <ClInclude Include="BossBullet.h">
-      <Filter>01. Obj\03. Boss\02. BossBullet</Filter>
+    <ClInclude Include="Vector2D.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Bullet.h">
+      <Filter>01. Obj\06. Bullet</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -263,8 +266,8 @@
     <ClCompile Include="BossRightArm.cpp">
       <Filter>01. Obj\03. Boss\01. BossRightArm</Filter>
     </ClCompile>
-    <ClCompile Include="BossBullet.cpp">
-      <Filter>01. Obj\03. Boss\02. BossBullet</Filter>
+    <ClCompile Include="Bullet.cpp">
+      <Filter>01. Obj\06. Bullet</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
