--- a/DefaultWindow/DefaultWindow/DefaultWindow.vcxproj
+++ b/DefaultWindow/DefaultWindow/DefaultWindow.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="Box.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="CollisionMgr.h" />
+    <ClInclude Include="PlayerBullet.h" />
     <ClInclude Include="ProgressBar.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="DefaultWindow.h" />
@@ -181,6 +182,7 @@
     <ClInclude Include="SceneMgr.h" />
     <ClInclude Include="ScrollMgr.h" />
     <ClInclude Include="SoundMgr.h" />
+    <ClInclude Include="Stage2.h" />
     <ClInclude Include="Stage1.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Sword.h" />
@@ -204,6 +206,7 @@
     <ClCompile Include="Box.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="CollisionMgr.cpp" />
+    <ClCompile Include="PlayerBullet.cpp" />
     <ClCompile Include="ProgressBar.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="DefaultWindow.cpp" />
@@ -222,6 +225,7 @@
     <ClCompile Include="SceneMgr.cpp" />
     <ClCompile Include="ScrollMgr.cpp" />
     <ClCompile Include="SoundMgr.cpp" />
+    <ClCompile Include="Stage2.cpp" />
     <ClCompile Include="Stage1.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
